# docsbot-ds-es

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
data/eval/: baseline_results.json  eval_questions.json  experiment_01_filter_outputs.json  experiments.md
docs/adr/: 0001-package-management-with-uv.md  0002-rag-pipeline-architecture.md  README.md
scripts/: demo_chunk.py  demo_embed.py  demo_eval.py  demo_metrics.py  demo_rag.py  demo_store.py  demo_test_fetch.py  demo_test_ingestion.py
src/docsbot/: __init__.py  config.py  logging.py
src/docsbot/embeddings/: __init__.py  embedder.py
src/docsbot/evaluation/: __init__.py  metrics.py
src/docsbot/ingestion/: __init__.py  chunk.py  fetch.py  parse.py
src/docsbot/retrieval/: __init__.py  store.py
tests/: __init__.py  conftest.py  test_config.py  test_logging.py  test_package.py
