[project]
name = "docsbot"
version = "0.1.0"
description = "Sistema RAG en español para Q&A sobre documentación de Pandas, scikit-learn y NumPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Victor Rosales", email = "rosalesvillalpando@gmail.com" },
]
keywords = ["rag", "llm", "nlp", "spanish", "data-science", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Spanish",
]
dependencies = [
   
]

[project.optional-dependencies]
dev = [
    
]

[project.urls]
Homepage = "https://github.com/StrangeVM/docsbot-ds-es"
Repository = "https://github.com/StrangeVM/docsbot-ds-es"
Issues = "https://github.com/StrangeVM/docsbot-ds-es/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsbot"]