[project]
name = "docsbot"
version = "0.1.0"
description = "Sistema RAG en español para Q&A sobre documentación de Pandas, scikit-learn y NumPy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Victor Rosales", email = "rosalesvillalpando@gmail.com" },
]
keywords = ["rag", "llm", "nlp", "spanish", "data-science", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Spanish",
]
dependencies = [

]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.13",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

]

[project.urls]
Homepage = "https://github.com/StrangeVM/docsbot-ds-es"
Repository = "https://github.com/StrangeVM/docsbot-ds-es"
Issues = "https://github.com/StrangeVM/docsbot-ds-es/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsbot"]

# ============================================================
#                     CONFIGURACIÓN DE RUFF
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py311"

# Carpetas que ruff DEBE analizar.
src = ["src", "tests"]

# Carpetas/archivos que ruff IGNORA.
extend-exclude = [
    "notebooks",
    "data",
    "*.ipynb",
]

[tool.ruff.lint]
# Reglas activas.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (variables sin usar, imports rotos)
    "I",      # isort (orden de imports)
    "B",      # flake8-bugbear (bugs comunes)
    "C4",     # flake8-comprehensions (mejores list/dict comprehensions)
    "UP",     # pyupgrade (sintaxis Python moderna)
    "N",      # pep8-naming (nombres consistentes)
    "SIM",    # flake8-simplify (código más simple)
    "RUF",    # reglas propias de ruff
]

# Reglas que IGNORAMOS conscientemente.
ignore = [
    "E501",   # line too long — el formatter lo maneja
    "B008",   # llamadas a funciones en defaults (común con FastAPI/typer)
]

# Permitir variables no usadas si empiezan con guión bajo (ej: `_unused`).
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Los tests pueden ser más laxos.
"tests/**/*.py" = [
    "S101",   # uso de assert (esencial en pytest)
    "ARG",    # argumentos no usados (fixtures de pytest)
]
"__init__.py" = ["F401"]  # imports re-exportados

[tool.ruff.lint.isort]
# Cómo agrupa los imports.
known-first-party = ["docsbot"]
combine-as-imports = true

[tool.ruff.format]
# El formatter de ruff (reemplazo de black).
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true  # también formatea código dentro de docstrings

# ============================================================
#                   CONFIGURACIÓN DE PYTEST
# ============================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Salida más útil por defecto.
addopts = [
    "-ra",                     # muestra resumen de tests skipped/failed/etc
    "--strict-markers",        # marcadores no registrados causan error
    "--strict-config",         # config inválida causa error
    "--showlocals",            # muestra valores locales en fallos
    "-v",                      # verbose
]

# Marcadores custom.
markers = [
    "slow: tests lentos (excluibles con -m 'not slow')",
    "integration: tests que llaman APIs externas",
    "unit: tests unitarios puros (rápidos, sin dependencias)",
]

# ============================================================
#                  CONFIGURACIÓN DE COVERAGE
# ============================================================

[tool.coverage.run]
source = ["src/docsbot"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
